fixed margin and size of headshot element that was getting cut off

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -255,7 +255,7 @@ footer .footer-logo .footer-dav {
 }
 
 .pop-up .headshot {
-  width: 65%;
+  width: 45%;
   margin-top: 4rem;
   background-color: var(--green);
   border: 0.3rem solid var(--primary-light);
@@ -769,6 +769,11 @@ footer a .icon {
     width: 20%;
   }
 
+  .pop-up .headshot {
+    width: 45%;
+    margin-top: 10rem;
+  }
+
   .portrait-lg,
   .hand-lg,
   .photo-lg,
@@ -789,7 +794,6 @@ footer a .icon {
   }
 
   .pop-up .headshot {
-    width: 65%;
     margin-top: 0;
   }
 
